# bootcamp

./: dailyLog.md
Day0/: readme.md
Day0/ex-base1/: README.md  pranitha_hello.py
Day0/ex-basics2/: demo.cast  pranitha_hello.py
Day0/ex-basics3/: demo.cast  main.py
Day0/ex-tools/: index.html
Day1/docs/: markDownCS.md  mermaid.mmd
basics/: readme.md
basics/ex-base1/: pyproject.toml
basics/ex-basics2/: pyproject.toml
basics/ex-basics3/: pyproject.toml
data-flow/finalProject/abstraction-8/: Dockerfile  Makefile  cli.py  dashboard.py  main.py
data-flow/level-0/: process.py
data-flow/level-1/process/: .env  README.md  input.txt  main.py  output.txt  pyproject.toml
data-flow/level-2/abstraction/: .env  README.md  cli.py
data-flow/level-3/abstraction-3/: cli.py  pipeline.py
data-flow/level-4/abs42/: cli.py  core_utils.py
data-flow/level-4/abstraction-4/: pipeline.yaml
data-flow/level-5/abstraction-5/: README.md  core_utils.py  input.txt  types1.py
data-flow/level-6/abstraction-6/: core.py  main.py
data-flow/level-7/abstraction-7/: core.py  input.txt  pipeline.yaml  types1.py
dataflow-framework/level-4/abs42/: core.py  (+1 more)
day-2/basic-drills/many_hellos_m9/: _config.ss  main.py  pyproject.toml
day-2/basic-drills/many_hellos_m9/configpath/: _config.yaml
day-2/basic-drills/say-hello-p1/: pyproject.toml
day-2/basic-drills/say-hello-p1/src/say_hello_p1/: __init__.py  config_load.py
day-2/basic-drills/say_hello/: .gitignore  README.md  main.py  pyproject.toml
day-2/basic-drills/say_hello/say_hello.egg-info/: PKG-INFO  SOURCES.txt
ex-basics-1/: main.py  pyproject.toml
ex-basics-1/ex_basics_1.egg-info/: PKG-INFO  SOURCES.txt
ex-basics-1/pranitha_hello/: __init__.py
pranitha-hello/: README.md  pranitha_hello.py  pyproject.toml
pranitha-hello/pranitha_hello.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+302 files in other folders)
