[project]
name = "many-hellos-m9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "say-hello-p1>=0.1.2",
    "typer>=0.15.3",
]

[tool.uv.sources]
typer = { index = "pypi"}

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
